@@ -30,6 +30,8 @@ Version 6.4.1 - not yet released
   - LX: fix Colibri/LX20 declaration problems
   - Westerboer: support for smaller steps in MC value setting
   - improved Bluetooth support on Windows CE
+  - work around Windows CE serial port driver bug, fixes freeze during
+    Nano task declaration (#2255)
 * user interface
   - remove duplicate "trail drift" setting (#2252)
   - fix flarm teamcolor saving (#2291)
